--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,15 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.AppBackground{
+  text-align: center;
+  background-color:rgb(223, 230, 228);
+  width: 100%;
+  height: 100%;
+  margin-left: 0%;
+  /* background: url('./Images/PrivacyLock.jpg') center center/cover no-repeat fixed */
+}
+.AppBackground p,h1{
+  color: white;
+}
+
